2009-04-27  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Handle maemo-launcher ApplicationDied signal, informing the user.
	For NB#101726.

	* src/home/hd-switcher.c:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher-item.c:

2009-04-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#111388 Thumb nails in switcher are overlaping.

	* src/home/hd-task-navigator.c:
	  Problem caused by concurrent animation (attempts).
	  Made them more robust, for example the thumbnails
	  can change direction while flying now.

2009-04-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111113, NB#110729 - Settings not stored on restart

	* src/home/hd-home-view-container.c
	  (hd_home_view_container_set_current_view):
	* src/home/hd-home-view.c (hd_home_view_applet_press,
	  hd_home_view_store_applet_position, hd_home_view_move_applet):
	* src/home/hd-home.c (hd_home_add_applet):
	* src/mb/hd-home-applet.c (hd_home_applet_init): Add GConf error
	  handling and sync call.

2009-04-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.43

2009-04-24  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#112368 - crash when hildon-desktop killed

	* src/home/hd-render-manager: A dispose function added.

2009-04-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixed according to Laszlo's investigation:
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_handle_stackable): Refresh window
	theme in both of the 'preceeds a follower' case. Fixes: NB#106208

2009-04-24  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Separated run-time data on applications from HdLauncherApp to
	HdRunningApp, in preparation for libgnome-menu integration.
	Moved handling of loading timeout to HdAppMgr.
	Fixes: NB#111844, NB#112105

	* src/home/hd-home.c:
	* src/home/hd-switcher.c: Added handling of application-loading-fail.
	* src/home/hd-task-navigator.c:
	* src/launcher/Makefile.am:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h: